corrected text alignment on streaming service list

--- a/frontend/src/pages/searchpage-styles.css
+++ b/frontend/src/pages/searchpage-styles.css
@@ -271,6 +271,7 @@ body {
     background-color: rgba(0, 0, 0, 0.9);
     visibility: hidden;
     text-transform: uppercase;
+    text-align: center;
 }
 
 #poster-service-activate-icon {
